force-app/main/default/objects/FinancialAccountTransaction__c/FinancialAccountTransaction__c.object-meta.xml
<CustomObject>
    <description
  >Represents information about financial account transactions.</description>
    <label>Financial Account Transaction</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>