force-app/main/default/objects/FinancialAccountTransaction__c/fields/DisputeReason__c.field-meta.xml
<CustomField>
    <fullName>DisputeReason__c</fullName>
    <description>Reason for the dispute.</description>
    <label>Dispute Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Duplicate Transactions</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Suspected Fraud</fullName>
            </value>
            <value>
                <fullName>Transaction not recognized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>