force-app/main/default/objects/FinancialAccountTransaction__c/fields/FinancialAccount__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Financial Account</description>
    <label>Financial Account</label>
    <referenceTo>FinancialAccount__c</referenceTo>
    <relationshipLabel>Financial Account Transactions</relationshipLabel>
    <relationshipName>FinancialAccountTranslations</relationshipName>
    <type>Lookup</type>
</CustomField>