force-app/main/default/objects/FinancialAccountTransaction__c/fields/FinancialInstitute__c.field-meta.xml
<CustomField>
    <fullName>FinancialInstitute__c</fullName>
    <description
  >Name of Financial Institute used to transfer amount.</description>
    <label>Financial Institute</label>
    <length>40</length>
    <type>Text</type>
</CustomField>