force-app/main/default/objects/FinancialAccountTransaction__c/fields/IsDisputed__c.field-meta.xml
<CustomField>
    <fullName>IsDisputed__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether the financial transaction is a disputed transaction.</description>
    <label>IsDisputed</label>
    <type>Checkbox</type>
</CustomField>