force-app/main/default/objects/FinancialAccountTransaction__c/fields/PostDate__c.field-meta.xml
<CustomField>
    <fullName>PostDate__c</fullName>
    <description>The date each transaction posted to the account.</description>
    <label>Post Date</label>
    <type>Date</type>
</CustomField>