force-app/main/default/objects/FinancialAccountTransaction__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique transaction ID for each transaction.</description>
    <label>Transaction Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>